fifth branch-notes

--- a/src/hello/hello.component.html
+++ b/src/hello/hello.component.html
@@ -1,1 +1,2 @@
 <p>Hello {{ name }}!</p>
+<!--interpolacion: cuando angular detecta una expresion entre 2 pares de llaves cualquiera sea, angular te devuelve el resultado-->
