--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <div style="text-align: center">
   <h1>Let's learn Angular</h1>
-  <custom-hello name="Dani"></custom-hello>
+  <custom-hello [name]="myName"></custom-hello>
 </div>
